# legged_mpc_amp

./: .gitignore  LICENSE  README.md  README_EN.md  THIRD_PARTY_NOTICES.md  env.sh  setup.sh
docs/: amp_data_guide.md  amp_data_guide_EN.md  build_guide.md  build_guide_EN.md  new_robot_setup.md  new_robot_setup_EN.md
scripts/: collect_amp_data.sh  collect_trot_amp_data.sh  convert_amp_data.py  convert_amp_data_isaaclab.py
src/legged_common/scripts/: generate_urdf.sh
src/legged_controllers/: CMakeLists.txt  package.xml
src/legged_controllers/launch/: amp_data_collection.launch  keyboard_control.launch  load_controller.launch
src/legged_controllers/scripts/: auto_amp_data_collector.py  foot_trajectory_plotter.py  keyboard_control.py
src/legged_controllers/src/: AmpDataLogger.cpp  LeggedController.cpp  TargetTrajectoriesPublisher.cpp
src/legged_estimation/: CMakeLists.txt
src/legged_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  (+1 more)
src/legged_interface/: CMakeLists.txt
src/legged_robot_description/: CMakeLists.txt  package.xml
src/legged_robot_description/launch/: empty_world.launch
src/legged_robot_description/urdf/: robot.xacro
src/legged_robot_description/urdf/Lite3/: const.xacro
src/legged_robot_description/urdf/a1/: const.xacro
src/legged_robot_description/urdf/aliengo/: const.xacro
src/legged_robot_description/urdf/common/: imu.xacro  leg.xacro
src/legged_robot_description/urdf/go1/: const.xacro
src/legged_robot_description/urdf/go2/: const.xacro
src/legged_wbc/: CMakeLists.txt
src/qpoases_catkin/: CMakeLists.txt
(+48 files in other folders)
